# OpenCompanyMini

./: .gitignore  AGENTS.md  AGENTS_cn.md  README.md  README_cn.md  environment.yml  opm_train.toml  pyproject.toml
.github/workflows/: ci.yml
data/gsm8k/: SOURCE.json  mixed_demo.jsonl  test.jsonl
docs/: README.md  README_cn.md  progress.md  progress_cn.md  technical_route.md  technical_route_cn.md
prompts/: root_coordinator.md  runtime_messages.json  runtime_messages_cn.json  tool_definitions.json  tool_definitions_cn.json  worker_cn.md
src/opm_train/: __init__.py  __main__.py  batch_runner.py  cli.py  config.py  context.py  diagnostics.py  extensions.py  loop.py  loop_hooks.py  models.py  orchestrator.py  orchestrator_agents.py  orchestrator_session.py  orchestrator_telemetry.py  prompts.py  protocol.py  storage.py  tools.py  utils.py
src/opm_train/data/: __init__.py  contracts.py  gsm8k.py  jsonl.py  math_verify.py  registry.py  simple_math.py
src/opm_train/llm/: __init__.py  openai_compatible.py
src/opm_train/orchestrator_tools/: __init__.py  agent_ops.py  query_ops.py  registry.py  shell.py
src/opm_train/prompt_assets/: root_coordinator.md  root_coordinator_cn.md  runtime_messages.json  (+5 more)
tests/: test_batch_runner.py  test_cli.py  test_config.py  test_context.py  test_data_gsm8k.py  test_data_registry.py  test_data_simple_math.py  test_diagnostics.py  test_loop_hooks.py  test_openai_client.py  test_orchestrator_integration.py  test_prompts.py  test_protocol.py  test_sft.py  test_storage.py  test_tool_registry.py  test_tools.py  test_trajectory_export.py
(+11 files in other folders)
