[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opm-train"
version = "0.1.0"
description = "OpenCompany mini train runtime: terminal-first modular multi-agent orchestration."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenCompany" }]
dependencies = [
  "httpx>=0.27,<1.0",
  "math-verify[antlr4_13_2]>=0.9.0,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "mypy>=1.10,<2.0",
]
sft = [
  "tinker",
]
openreward = [
  "openreward",
]

[project.scripts]
opm-train = "opm_train.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opm_train = ["prompt_assets/*.md", "prompt_assets/*.json"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
mypy_path = "src"
show_error_codes = true
pretty = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
disable_error_code = ["attr-defined"]
